--- a/client/src/app/less/cotainer-detail.less
+++ b/client/src/app/less/cotainer-detail.less
@@ -12,6 +12,9 @@
             text-indent: 10px;
         }
     }
+    .segment{
+        margin-bottom: 20px;
+    }
     .overview {
         background: #FFF;
         padding: 20px;
@@ -88,5 +91,8 @@
                 font-size: 0.9rem;
             }
         }
+    }
+    .info{
+        background: #fff;
     }
 }
