--- a/client/src/app/tpls/pages/container/create.tpl.html
+++ b/client/src/app/tpls/pages/container/create.tpl.html
@@ -63,7 +63,7 @@
             </section>
         </div>
         <div class="eight wide column">
-            <h4>卷映射</h4>
+            <h4>挂载点</h4>
             <section class="binds">
                 <div class="ui form">
                     <table class="ui table">
