--- a/client/src/app/tpls/pages/container/detail.tpl.html
+++ b/client/src/app/tpls/pages/container/detail.tpl.html
@@ -2,7 +2,7 @@
     <div class="head">
         <i class="cubes icon"></i> <strong>{{container.Name}}</strong>
     </div>
-    <div class="overview">
+    <div class="overview segment">
         <ul class="clearfix">
             <li class="item status">
                 <div>
@@ -37,6 +37,90 @@
             </li>
         </ul>
     </div>
+    <div class="info segment">
+        <div class="ui flat tabular menu">
+            <a class="item active" data-tab="base">基本信息</a>
+            <a class="item" data-tab="volumn">挂载点</a>
+            <a class="item" data-tab="port">端口映射</a>
+            <a class="item" data-tab="env">环境变量</a>
+        </div>
+        <div class="ui flat tab active" data-tab="base">
+            <table class="ui table very basic">
+                <tbody>
+                    <tr>
+                        <td>PID</td>
+                        <td>{{container.State.Pid}}</td>
+                    </tr>
+                    <tr>
+                        <td>主机名称</td>
+                        <td>{{container.Config.Hostname}}</td>
+                    </tr>  
+                    <tr>
+                        <td>工作目录</td>
+                        <td>{{container.Config.WorkingDir}}</td>
+                    </tr>  
+                    <tr>
+                        <td>创建时间</td>
+                        <td>{{container.Created}}</td>
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+        <div class="ui flat tab" data-tab="volumn">
+            <table class="ui table very basic">
+                <thead>
+                    <tr>
+                        <th>容器路径</th>
+                        <th>主机路径</th>
+                        <th>只读</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="mount in container.Mounts track by $index">
+                        <td>{{mount.Destination.path}}</td>
+                        <td>{{mount.Source}}</td>
+                        <td>
+                            <div ng-switch disabled="true" ng-model="mount.Mode" ng-true-value="'ro'" ng-false-value="'rw'"></div>
+                        </td>
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+        <div class="ui flat tab" data-tab="port">
+            <table class="ui table very basic">
+                <thead>
+                    <tr>
+                        <th>容器端口</th>
+                        <th>主机端口</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="(key, port) in container.NetworkSettings.Ports track by $index">
+                        <td>{{key}}</td>
+                        <td>{{port[0].HostIp}}:{{port[0].HostPort}}</td>
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+        <div class="ui flat tab" data-tab="env">
+            <table class="ui table very basic">
+                <thead>
+                    <tr>
+                        <th>键</th>
+                        <th>值</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="env in container.Config.Env track by $index">
+                        <td>{{env.split("=")[0]}}</td>
+                        <td>{{env.split("=")[1]}}</td>
+                    </tr>                    
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+
     <div class="text pages">
         <div class="ui top attached tabular menu">
             <a class="item active" data-tab="attach">Attach</a>
