--- a/client/src/app/less/cotainer-detail.less
+++ b/client/src/app/less/cotainer-detail.less
@@ -47,6 +47,13 @@
                     span {
                         color: @app-container-detail-font-color-second;
                     }
+                    div{
+                        padding: 10px 0;
+                        width: @app-container-detail-item-width;
+                        span{
+                            margin: 0 auto;
+                        }
+                    }
                 }
             }
             &.net {
