--- a/client/src/app/tpls/dialogs/console.tpl.html
+++ b/client/src/app/tpls/dialogs/console.tpl.html
@@ -1,27 +1,28 @@
 <div class="app-dialog-console" ng-controller="containerConsoleCtrl">   
-    <md-content class="md-padding">
-        <md-tabs md-selected="selectedIndex" md-border-bottom md-autoselect>
-            <md-tab label="Attach">
+    <md-tabs md-selected="selectedIndex" md-autoselect>
+        <md-tab label="Attach">
+            <div>
                 <div>
-                    <div>
-                        <div ng-term url="attachUrl" start="attachStart"></div>
-                    </div>
+                    <div ng-term url="attachUrl" start="attachStart"></div>
                 </div>
-            </md-tab>
-            <md-tab label="Log">
+            </div>
+        </md-tab>
+        <md-tab label="Log">
+            <div>
                 <div>
-                    <div>
-                        <div ng-term url="logUrl" start="logStart"></div>
-                    </div>
+                    <div ng-term url="logUrl" start="logStart"></div>
                 </div>
-            </md-tab>            
-            <md-tab ng-repeat="tab in tabs" label="{{tab.label}}">
-                <div>
-                    <div ng-term url="tab.execUrl" start="tab.start"></div>
-                </div>
-            </md-tab>
-            <md-tab label="增加" ng-click="add()" ng-disabled="isMax">
-            </md-tab>
-        </md-tabs>
-    </md-content>
+            </div>
+        </md-tab>            
+        <md-tab ng-repeat="tab in tabs" label="{{tab.label}}">
+            <div>
+                <div ng-term url="tab.execUrl" start="tab.start"></div>
+            </div>
+        </md-tab>
+
+
+
+        <md-tab label="增加" ng-click="add()" ng-disabled="isMax">
+        </md-tab>
+    </md-tabs>
 </div>
