--- a/client/src/app/less/cotainers.less
+++ b/client/src/app/less/cotainers.less
@@ -1,3 +1,11 @@
 .app-containers {
-
+    .action {
+    	vertical-align: middle;
+        > .inline {
+            display: inline-block;
+        }
+        > div{
+        	vertical-align: middle;
+        }
+    }
 }
