--- a/client/src/app/tpls/pages/container/list.tpl.html
+++ b/client/src/app/tpls/pages/container/list.tpl.html
@@ -28,7 +28,7 @@
                     <div class="inline">
                         <span ng-switch disabled="{'changing': true}[container.State]" ng-before-change="switch($event, container)" ng-data="container" ng-model="container.State" ng-true-value="'running'" ng-false-value="'exited'"></span>
                     </div>
-                    <button ng-if="container.State=='exited'" ng-click="remove(container)" class="inline mini compact ui button orange">移除</button>                    
+                    <button ng-if="container.State!='running'" ng-click="remove(container)" class="inline mini compact ui button orange">移除</button>                    
                 </td>
             </tr>
         </tbody>
